-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.6.0
-
None
-
-
c5d9e4a7a (dev), 7dc27689c (6.6), ae16c1eae (tqtc/lts-6.5)
Calling setDefaultButton and setEscapeButton no longer has an effect on macOS (native dialogs). E.g.
QMessageBox b;
auto accept = b.addButton("Accept", QMessageBox::AcceptRole);
auto reject = b.addButton("Reject", QMessageBox::RejectRole);
b.setDefaultButton(reject);
b.setEscapeButton(accept);
b.exec();
qDebug() << (b.clickedButton() == reject ? "reject button" : "accept button");
prints "reject button" when pressing escape, and "accept button" when pressing enter, ignoring the set... calls.
- is duplicated by
-
QTCREATORBUG-29849 "The file changed on disk" dialog default button changed
-
- Closed
-
- relates to
-
QTBUG-118241 QMessageBox::button(QMessageBox::Close)->setText() does not work
-
- Closed
-